[gd_scene format=3 uid="uid://8qgk75ldh5jj"]

[ext_resource type="Script" uid="uid://dy20ppo3i47jt" path="res://scenes/bosses/hera/hera_cloud.gd" id="1_ct8eq"]
[ext_resource type="Texture2D" uid="uid://bbyc2tjo0mly0" path="res://assets/art/vfx/tuono.png" id="2_autcm"]
[ext_resource type="Texture2D" uid="uid://g0ata7ted2kr" path="res://assets/art/vfx/stormcloud.png" id="3_autcm"]
[ext_resource type="Script" uid="uid://dapia6wbkt1yb" path="res://scripts/damaging_component.gd" id="3_n0tm8"]
[ext_resource type="Script" uid="uid://hjq0cyuvuve5" path="res://scenes/player/sound_component.gd" id="5_x5arb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wms8s"]
size = Vector2(16, 64)

[node name="Cloud" type="Node2D" unique_id=923179448]
script = ExtResource("1_ct8eq")

[node name="Lighting" type="Sprite2D" parent="." unique_id=298937571]
modulate = Color(1, 0.8833333, 0, 1)
position = Vector2(0, 36)
texture = ExtResource("2_autcm")

[node name="CloudSprite" type="Sprite2D" parent="." unique_id=1984205710]
texture = ExtResource("3_autcm")

[node name="Area2D" type="Area2D" parent="." unique_id=253026370]
collision_layer = 0
input_pickable = false
monitoring = false
monitorable = false
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=2044225770]
position = Vector2(0, 36)
shape = SubResource("RectangleShape2D_wms8s")

[node name="DamagingComponent" type="Node" parent="." unique_id=1156466275]
script = ExtResource("3_n0tm8")
metadata/_custom_type_script = "uid://dapia6wbkt1yb"

[node name="LightingTimer" type="Timer" parent="." unique_id=1313102024]
one_shot = true

[node name="DisableLightingTimer" type="Timer" parent="." unique_id=1558895589]
one_shot = true

[node name="SoundComponent" type="AudioStreamPlayer2D" parent="." unique_id=1805472642]
script = ExtResource("5_x5arb")
metadata/_custom_type_script = "uid://hjq0cyuvuve5"

[connection signal="body_entered" from="Area2D" to="." method="on_player_entered"]
